<resources>
    <string name="app_name">GEEKS_DEZIS</string>
    <string name="type_a_massage">Type a massage</string>
    <string name="reg_txt">Регистрация</string>
    <string name="email_txt">example@gmail.com</string>
    <string name="name_txt">ФИО</string>
    <string name="num_txt">Номер телефона</string>
    <string name="num_ord_txt">Номер заказа</string>
    <string name="address_txt">Адрес</string>
    <string name="num_flat_txt">Номер дома/квартиры</string>
    <string name="register_txt">Зарегистрироваться</string>
    <string name="error_in_reg_txt">Не удалось зарегистрироваться?</string>
    <string name="connect_txt">Связаться</string>
    <string name="txt_1">Уже есть аккаунт?</string>
    <string name="sign_in_txt">Войти</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_txt">С возвращением!</string>
    <string name="error_in_sign_in_txt">Не удалось войти?</string>
    <string name="skip_txt">Пропустить</string>
    <string name="come_txt">Добро пожаловать!\nГотовы к чистым переменам?</string>
    <string name="ready_txt">Готовы к чистым переменам?</string>
    <string name="txt_know">Мы знаем, как эффективно избавиться от вредителей и бактерий. Мы-ваш щит от грязи!</string>
    <string name="txt_tracking">Отслеживайте обработки. Следите за датами первой и последней обработки.</string>
    <string name="txt_show">Вы указываете проблему-мы создаем чистоту быстро и профессионально.</string>
    <string name="txt_support">Поддержка всегда рядом! Общайтесь с менеджером через встроенный чат.</string>
    <string name="txt_ready">Готовы к действиям? Оставьте заявку и вперед к чистоте!</string>
    <string name="continue_txt">Продолжить</string>
    <string name="code_txt">Введите код из СМС</string>
    <string name="inst_txt">Мы отправили вам код на почту</string>
    <string name="error_code_txt">Вы ввели неверный код.</string>
    <string name="send_again_txt">Отправить снова</string>
    <string name="after_second_txt">через 1 минуту</string>
    <string name="further_txt">Далее</string>
    <string name="success_txt">Вы успешно зарегистрировались</string>
    <string name="Information_about_the_record">Информация о записи</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="deratization">Дератизация</string>
    <string name="information1">Запись ведется не менее чем за один день до даты услуги.</string>
    <string name="information2">После бронирования услуги, наш менеджер свяжется с вами для подтверждения заявки и уточнения деталей.</string>
    <string name="information3">Изменение или отмена бронирования возможны не позднее, чем за 24 часа до назначенного времени.</string>
    <string name="disinsection_txt">Дезинсекция</string>
    <string name="disinfection">Дезинфекция</string>
    <string name="disinsection_info">Основные проблемы с паразитами — это клопы, тараканы и блохи, а также летающие насекомые, которые кусают и нарушают комфорт человека.</string>
    <string name="deratization_info">Избавление от грызунов для защиты вашего пространства и здоровья.</string>
    <string name="disinfection_info">Уничтожение микроорганизмов, плесени, патогенов, устранение запахов и высолов для безопасной среды.</string>
    <string name="detailed">Подробнее</string>
    <string name="title_activity_service_screen">serviceScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="full_name">Ф.И.О</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="phone_number">Номер телефона</string>
    <string name="order_history">История заказов</string>
    <string name="first_treatment">Первая обработка:</string>
    <string name="services">Услуги</string>
    <string name="all_treatments">Все обработки:</string>
    <string name="date">Дата:</string>
    <string name="alexey_ivanovich" translatable="false">Alexey Ivanovich</string>
    <string name="profile">Профиль</string>
    <string name="about_us">О нас</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="dark_theme" translatable="false">Тёмная тема</string>
    <string name="delete_account" translatable="false">Удалить аккаунт</string>
    <string name="apartments_720" translatable="false">720 квартир</string>
    <string name="processed_in_Kyrgyzstan" translatable="false">обработано в Кыргызстане</string>
    <string name="on_guard_of_purity" translatable="false">на страже чистоты</string>
    <string name="we_process_it_monthly" translatable="false">ежемесячно \nобрабатываем</string>
    <string name="email" translatable="false">Email</string>
    <string name="address" translatable="false">Адрес</string>
    <string name="House" translatable="false">Дом</string>
    <string name="Flat" translatable="false">Квартира</string>
    <string name="save" translatable="false">Сохранить</string>
    <string name="language" translatable="false">Язык:</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="_10_years" translatable="false">10 лет</string>
    <string name="operating_mode">Режим работы:</string>
    <string name="telephone">Телефон:</string>
    <string name="user_txt">Пользователь</string>
    <string name="admin_txt">Администратор</string>
    <string name="password_txt">Пароль</string>
    <string name="policy_txt">Выбирая «Зарегистрироваться», вы подтверждаете свое согласие с Условием продажи и принимаете условия Положения о конфиденциальности.</string>
    <string name="for_order_txt">Для оформления заказов</string>
    <string name="for_managment_system_txt">Для управления системой</string>
    <string name="signin_txt">Вход</string>
    <string name="forgot_password_txt">Забыли пароль?</string>
    <string name="txt_code">Код:</string>
    <string name="txt_waiting">Пожалуйста, подождите пока администратор даст вам разрешение на вход в приложение!</string>
    <string name="denied_txt">К сожалению администратор не дал вам разрешение на вход в приложение! Попробуйте зайти с другого аккаунта.</string>
    <string name="return_to_entrance_txt">Вернуться ко входу</string>
    <string name="login_txt">Логин</string>
    <string name="administrator_txt">Администратор</string>
    <string name="choose">Выберите услугу:</string>
    <string name="dezinfection">Дезинфекция</string>
    <string name="order">Заказать услугу</string>
    <string name="dezinsection">Дезинсекция</string>
    <string name="data_have_saved">Данные успешно сохранены</string>
    <string name="in_main">На главную</string>
    <string name="ready">Готово</string>
    <string name="reset">Сбросить</string>
    <string name="enter_request">Запросы для входа</string>
    <string name="succes">Подтвердить</string>
    <string name="UnEnter">Отказать</string>
    <string name="time">Время:</string>
    <string name="nymber_of_home">Номер квартиры/дома:</string>
    <string name="adress">Адрес: </string>
    <string name="phone_number_user">Телефон:</string>
    <string name="gmail">Почта:</string>
    <string name="NameSeurname">ФИО:</string>
    <string name="dete">Дата:</string>
    <string name="back_button">Назад</string>
    <string name="new_order">Новые заказы</string>
    <string name="completed_orders">Завершенные</string>
    <string name="complete_order_button">Завершить</string>
    <string name="_21_30">21:30</string>
    <string name="_17_11_2024">17.11.2024</string>
    <string name="data">Дата:</string>
    <string name="_13_21">13/21</string>
    <string name="_5">Восток-5</string>
    <string name="address_label">Адрес:</string>
    <string name="service_type_disinfection">Дезинфекция</string>
    <string name="alexey_ivanovichh">Alexey Ivanovich</string>
    <string name="label_services">Услуги:</string>
    <string name="header">Заголовок</string>
    <string name="order2">Заказать</string>
    <string name="desc">Описание</string>
    <string name="admin_btn">Администратор</string>
    <string name="for_service">Для оформления заказов</string>
    <string name="txt_sistem_sing">Для управления системой</string>
    <string name="todo">TODO</string>
    <string name="off_order">Заказ завершен?</string>
    <string name="Successfully_saved_changes">Успешно сохранены \nизменения</string>
    <string name="error">Ошибка</string>
    <string name="ok">Ok</string>
    <string name="phone_number_reg">Номер телефона*</string>
    <string name="order_done">Вы завершили заказ!</string>
    <string name="close_x">Закрыть</string>
    <string name="no_internet_txt">Нет соединения с интернетом\nПроверьте подключение к интернету</string>
    <string name="img_human_desc">Изображение оператора за компьютером для поддержки пользователей\n</string>
    <string name="desc_logo">Логотип Dezis</string>
    <string name="server_eror_txt">Технические неполадки</string>
    <string name="sorry_text">Извините за неудобства, возникли технические неполадки в нашем приложении. Мы работаем над исправлением проблемы. Пожалуйста, попробуйте обновить приложение. Спасибо за Ваше понимание!</string>
    <string name="update_txt">Обновить</string>
</resources>