<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".presentation.fragments.authorization.admin.AdminSignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="150dp"
            android:text="@string/signin_txt"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/roboto_reg" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_log_in"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:hint="@string/login_txt"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_log_in"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password_txt"

            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_passwordl"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password_txt"
            android:textColor="@color/white"
            app:fontFamily="@font/roboto_reg" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:padding="18dp"
            android:text="@string/continue_txt"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="12dp"
            tools:backgroundTint="@color/grey_dark" />

    </LinearLayout>

    <TextView
        android:id="@+id/terms_of_sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="60dp"
        android:linksClickable="true"
        android:text="@string/policy_txt"
        android:textColor="@color/white"
        android:textSize="12sp" />


</FrameLayout>